--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1295,3 +1295,43 @@ p {
 .copyright-text > p {
     margin-bottom: 0;
 }
+.nav-tabs-redBorders {
+  border-bottom: 1px solid red;
+  margin-top: 50px;
+  > li {
+    float: right;
+    > a {
+      border-radius: 0;
+      border: solid red 1px;
+      border-bottom-color: transparent;
+      font-size: 12px;
+      text-transform: uppercase;
+      font-weight: 700;
+      position: relative;
+      color: #ccc;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+  li.active {
+    > a,
+    > a:focus,
+    > a:hover {
+      color: #ccc;
+      border: solid red 1px;
+      border-bottom-color: transparent;
+      cursor: default;
+      text-decoration: none;
+      &:before {
+        content: " ";
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        background: red;
+        top: 0;
+        left: 0;
+      }
+    }
+  }
+}
